# RustyFlow

./: .chatignore  .gitignore  Cargo.toml  README.md  chat_cpu.sh  chat_gpu.sh  config.env  file_list.txt  push_to_github.sh  run.sh  train_cpu.sh  train_gpu.sh
docs/: acceleration.md  data_handling.md  evaluation.md
examples/: language_model.rs
scripts/: download_tinyshakespeare.sh
src/: data.rs  gpu.rs  lib.rs  loss.rs  optimizer.rs  tensor.rs
src/nn/: attention.rs  embedding.rs  feed_forward.rs  layer_norm.rs  linear.rs  mod.rs  patch_embedding.rs
