[package]
name = "rusty_flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
wgpu = "0.19"
pollster = "0.3"
once_cell = "1.19"
bytemuck = { version = "1.15", features = ["derive"] }

[lib]
name = "rusty_flow"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
